<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkg_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/title_bkg"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <!--
        <Button
            android:id="@+id/btn_send_recv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:text="@string/btn_send_recv" />
            -->
        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btn_send_recv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_gravity="center"
            android:background="@color/title_bkg"
            android:text="@string/btn_send_recv" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/launcher_lay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/my_addr" />

            <TextView
                android:id="@+id/tv_my_addr"
                style="@style/launcher_lay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp" />
        </LinearLayout>

        <TextView
            style="@style/launcher_lay"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_height"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/conn_target" />

        <ListView
            android:id="@+id/lv_connected_addr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:scrollbars="@null" >
        </ListView>
    </LinearLayout>

</LinearLayout>